--- a/index.stylesheet.css
+++ b/index.stylesheet.css
@@ -38,7 +38,9 @@ a:visited {
 
 p {
   text-align: center;
-  color: #808081;
+  padding: 20px 50px 0 50px;
+  font-family: Papyrus;
+  color: #333333;
 }
 
 #name {
@@ -56,13 +58,6 @@ p {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-p {
-  text-align: center;
-  padding: 20px 50px 0 50px;
-  font-family: Papyrus;
-  color: #333333;
 }
 
 #project {
